Ensure br's don't have the * + * spacing applied

--- a/static/sass/_snapcraft_custom-typography.scss
+++ b/static/sass/_snapcraft_custom-typography.scss
@@ -48,4 +48,11 @@
   .is-ticked {
     background-position: 0 .3em;
   }
+
+  // This can be removed when
+  // https://github.com/vanilla-framework/vanilla-framework/issues/1627
+  // is resolved.
+  br {
+    margin-top: 0;
+  }
 }
